# anemoi-datasets-source-plugin

./: .pre-commit-config.yaml  README.md  custom.yaml  custom2.yaml  pyproject.toml
anemoi_plugin_example/: filter.py  filter2.py
src/anemoi_datasets_source_plugin/: demo.py
tests/: test2.sh  test_plugin.py
