#!/usr/bin/env python
# (C) Copyright 2024 ECMWF.
#
# This software is licensed under the terms of the Apache Licence Version 2.0
# which can be obtained at http://www.apache.org/licenses/LICENSE-2.0.
# In applying this licence, ECMWF does not waive the privileges and immunities
# granted to it by virtue of its status as an intergovernmental organisation
# nor does it submit to any jurisdiction.


[build-system]
requires = ["setuptools>=60", "setuptools-scm>=8.0"]

[project]
description = "A demonstration of how to create a source plugin for the anemoi-datasets package."
name = "anemoi-datasets-source-plugin"

dynamic = ["version"]
license = { file = "LICENSE" }
requires-python = ">=3.9"

authors = [
    { name = "European Centre for Medium-Range Weather Forecasts (ECMWF)", email = "software.support@ecmwf.int" },
]

keywords = ["tools", "ai"]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Operating System :: OS Independent",
]

dependencies = [

]

[project.optional-dependencies]
dev = ["pre-commit"]

[project.urls]
Repository = "https://github.com/ecmwf-lab/ai-models-aifs"

[tool.setuptools_scm]
version_file = "src/anemoi_datasets_source_plugin/_version.py"

[project.entry-points."anemoi.datasets.sources"]
demo = "anemoi_datasets_source_plugin.demo:demo_source"
